# ex3-matrixes

./: Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  Character.h  Game.cpp  Game.h  IntMatrix.cpp  IntMatrix.h  Matrix.h  Medic.cpp  Sniper.cpp  Sniper.h  Soldier.cpp  dependencies.csv  dry2_ex3.docx  ex3_dry.docx  test
Part C/: Auxiliaries.cpp  Auxiliaries.h  CMakeLists.txt  Character.cpp  Character.h  Exception.cpp  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Matrix.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  partC_tester.cpp  test_partC.cpp
